[package]
name = "FrontierG"
version = "0.1.0"
edition = "2021"
description = "Off-road simulation game built on RTGC-0.7 engine"

[dependencies]
rtgc_engine = { path = "../rtgc_engine" }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_chacha = "0.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
