[package]
name = "offroad_frontier"
version = "0.1.0"
edition = "2021"
authors = ["Offroad Frontier Team"]
description = "Hardcore off-road simulation game built on RTGC-0.7 engine"

[dependencies]
# RTGC Engine (локальная ссылка)
rtgc = { path = "../RTGC-0.7" }

# Физика и математика
nalgebra = "0.32"
parry3d = "0.13"
rapier3d = "0.17"

# Асинхронность
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Логирование
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# UI
egui = "0.24"
eframe = "0.24"

# Аудио
rodio = "0.17"

# Изображения
image = "0.24"

# Случайные числа
rand = "0.8"
rand_chacha = "0.3"

# Время
chrono = { version = "0.4", features = ["serde"] }

# Потокобезопасные структуры
dashmap = "5.5"
crossbeam = "0.8"

# Профилирование
profiling = "1.0"

# Графика
winit = "0.29"
wgpu = "0.18"
pollster = "0.3"
noise = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "offroad_frontier"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
